--- a/0708숙제/style.css
+++ b/0708숙제/style.css
@@ -4,9 +4,17 @@
   box-sizing: border-box;
 }
 
-.num {
-  height: 10px;
+a:hover {
+  width: 5px;
+  height: 5px;
+  
+  color: rgb(155, 3, 54);
+  background-color: rgb(240, 159, 130);
+}
+
+a {
   width: 10px;
-  margin: 20px;
-  padding: 10px;
+  height: 10px;
+  margin: 5px;
+  text-decoration: none;
 }
